--- a/03-expandir-angular/src/app/dbz/components/list/list.component.html
+++ b/03-expandir-angular/src/app/dbz/components/list/list.component.html
@@ -1,5 +1,9 @@
 <h4>Listado</h4>
 <ul class="list-group">
-  <li class="list-group-item">Josk - 500</li>
-  <li class="list-group-item">Vegueta - 500</li>
+  <li *ngFor="let character of characterList" 
+    class="list-group-item">
+    <span>{{character.name}} - </span>
+    <strong>Power: </strong>
+    <span>{{ character.power }}</span>
+  </li>
 </ul>
