--- a/03-expandir-angular/src/app/dbz/pages/main-page.component.html
+++ b/03-expandir-angular/src/app/dbz/pages/main-page.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <app-dbz-list></app-dbz-list>
+    <dbz-list [characterList]="characters"></dbz-list>
   </div>
 
 
