--- a/03-expandir-angular/src/app/dbz/components/list/list.component.html
+++ b/03-expandir-angular/src/app/dbz/components/list/list.component.html
@@ -1,6 +1,6 @@
 <h4>Listado</h4>
 <ul class="list-group">
-  //expandiendo el ngFor
+  <!-- //expandiendo el ngFor -->
   <li *ngFor="
     let character of characterList; 
     let i = index; 
@@ -9,7 +9,12 @@
     let isEven = even;
     let isOdd = odd;
   " 
-    class="list-group-item">
+    class="list-group-item"
+    [ngClass]="{
+      'list-group-item-dark': isLast,
+      'list-group-item-primary': isEven,
+    }"
+    >
 
     <span class="text-primary"> {{ i }}.</span>
 
