--- a/03-expandir-angular/src/app/dbz/components/add-character/add-character.component.html
+++ b/03-expandir-angular/src/app/dbz/components/add-character/add-character.component.html
@@ -1,4 +1,6 @@
-<form class="row">
+<h4>Agregar personaje</h4>
+
+<form class="row" (ngSubmit)="emitCharacter()">
   <input 
     type="text"
     [(ngModel)]="character.name"
