--- a/03-expandir-angular/src/app/dbz/pages/main-page.component.html
+++ b/03-expandir-angular/src/app/dbz/pages/main-page.component.html
@@ -8,6 +8,6 @@
 
 
   <div class="col">
-    <app-dbz-add-character></app-dbz-add-character>
+    <dbz-add-character (onNewCharacter)="onNewCharacter($event)"></dbz-add-character>
   </div>
 </div>
