--- a/03-expandir-angular/src/app/dbz/components/list/list.component.html
+++ b/03-expandir-angular/src/app/dbz/components/list/list.component.html
@@ -9,26 +9,27 @@
     let isEven = even;
     let isOdd = odd;
   " 
-    class="list-group-item"
+    class="list-group-item d-flex justify-content-between align-items-center"
     [ngClass]="{
       'list-group-item-dark': isLast,
       'list-group-item-primary': isEven,
     }"
     >
 
-    <span class="text-primary"> {{ i }}.</span>
+    <div>
+       <span class="text-primary"> {{ i + 1 }}.</span>
+       <span>{{character.name}} - </span>
+       <strong>Power: </strong>
+       <span>{{ character.power }}</span>
 
-    <span>{{character.name}} - </span>
-
-    <strong>Power: </strong>
-
-    <span>{{ character.power }}</span>
-
-    <span>Es el primero: {{ isFirst }} </span>
+       <!-- <span>Es el primero: {{ isFirst }} </span>
     <span>Es el ultimo: {{ isLast }}</span>
 
     <span>Es par: {{ isEven }}</span>
-    <span>Es impar: {{ isOdd }}</span>
+    <span>Es impar: {{ isOdd }}</span> -->
+    </div>
+
+    <button (click)="onDeleteCharacter(character.id)" class="btn btn-danger">X</button>
 
 
   </li>
