--- a/07-countryApp/src/app/app.component.html
+++ b/07-countryApp/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-4">
   <div class="col">
     <!-- Sidebar -->
-    sidebar
+    <shared-sidebar></shared-sidebar>
   </div>
 
   <div class="col">
