--- a/11-heroesApp/src/app/heroes/pages/search-page/search-page.component.html
+++ b/11-heroesApp/src/app/heroes/pages/search-page/search-page.component.html
@@ -7,7 +7,7 @@
     <input
       type="text"
       matInput
-      formControl="searchInput"
+      [formControl]="searchInput"
       (input)="searchHero()"
       [matAutocomplete]="auto"
     />
