--- a/11-heroesApp/src/app/auth/pages/login-page/login-page.component.html
+++ b/11-heroesApp/src/app/auth/pages/login-page/login-page.component.html
@@ -1,4 +1,5 @@
 <div class="flex flex-column">
+
   <span class="text-lg mb-4">Login</span>
 
   <mat-form-field>
@@ -7,16 +8,19 @@
   </mat-form-field>
 
   <mat-form-field>
-    <mat-label>Contrasena</mat-label>
-    <input type="password" matInput placeholder="Contrasena">
+    <mat-label>Contraseña</mat-label>
+    <input type="password" matInput placeholder="Contraseña">
   </mat-form-field>
 
-  <button mat-button mat-flat-button color="primary">
+  <button mat-button mat-flat-button color="primary"
+    (click)="onLogin()">
     <mat-icon>save</mat-icon>
     Ingresar
   </button>
 
+
   <div class="flex justify-content-end mt-5">
     <a routerLink="/auth/new-account">¿Ya tienes cuenta?</a>
   </div>
+
 </div>
